@@ -1,3 +1,9 @@
+2003-01-06  Michael Chastain  <mec@shout.net>
+
+	* gdb.mi/mi-pthreads.exp (check_mi_thread_command_set):
+	When selecting a thread, 'line' and 'file' are optional.
+	* gdb.mi/mi1-pthreads.exp: Likewise.
+
 2003-01-06  Andreas Schwab  <schwab@suse.de>
 
 	* lib/gdb.exp: Set LC_ALL to "C" to avoid spurious testsuite
